--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
       sizes="16x16"
       href="%PUBLIC_URL%/favicon-16x16.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
 
     <title>Mockingjay -- Twitter Generator</title>
   </head>
