--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -27,6 +27,7 @@
       sizes="16x16"
       href="%PUBLIC_URL%/favicon-16x16.png"
     />
+    <link rel="stylesheet" href="%PUBLIC_URL%/index.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
